# phonecodes

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTIONS.md  LICENSE.txt  README.md  phonecodes.py  pyproject.toml
.github/workflows/: python_package.yml
src/: phonecodes.py  pronlex.py
src/phonecodes/: phonecode_tables.py  phonecodes.py  pronlex.py
test/: conftest.py  sentences.py  test_phonecodes.py  test_pronlex.py
